# OS_Labs

./: .gitignore  CMakeLists.txt  README.md
CP/cp/: CMakeLists.txt  main.cpp
CP/cp/include/: FBLAllocator.hpp  TwinAllocator.hpp  allocator1.hpp  allocator2.hpp  timer.hpp
CP/cp/src/: FBLAllocator.cpp  TwinAllocator.cpp  allocator1.cpp  timer.cpp
CP/cp/src /: FBLAllocator.cpp  TwinAllocator.cpp
CP/src /: FBLAllocator.cpp  TwinAllocator.cpp
CP/tests/: cp_test.cpp
KP/cp/: CMakeLists.txt
KP/cp/cp/include/: allocator1.hpp
KP/cp/tests/: CMakeLists.txt
OS_Lab2/lab2/: CMakeLists.txt  main.cpp
OS_Lab2/lab2/include/: deck.h  monteCheckDefault.h  monteCheckThreads.h
OS_Lab2/lab2/src/: deck.cpp  monteCheckDefault.cpp  monteCheckThreads.cpp
OS_Lab2/tests/: CMakeLists.txt  lab2_test.cpp
OS_Lab3/: CMakeLists.txt
OS_Lab3/lab3/: CMakeLists.txt  lab3_test.cpp
OS_Lab3/lab3/include/: utils.hpp
OS_Lab3/lab3/src/: child.cpp  parent.cpp
OS_Lab4/include/: lib.hpp
OS_Lab4/lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
OS_Lab4/lab4/include/: lib.h  utils.h
OS_Lab4/lab4/src/: lib1.cpp  lib2.cpp  utils.cpp
OS_Lab4/src/: lib1.cpp  lib2.cpp  utils.cpp
OS_Lab4/tests/: CMakeLists.txt  lab4_lib1_test.cpp  lab4_lib2_test.cpp
OS_Lab5-7/: CMakeLists.txt
OS_Lab5-7/lab5-7/: CMakeLists.txt
OS_Lab5-7/lab5-7/include/: socket.hpp
OS_Lab5-7/lab5_7/: CMakeLists.txt
OS_Lab5-7/tests/: CMakeLists.txt  lab5-7_test.cpp  lab5_7_test.cpp
lab1/: CMakeLists.txt
lab1/include/: parent.hpp
lab1/src/: child.cpp  parent.cpp
tests/: CMakeLists.txt  lab1_test.cpp
